tests/errors/dot_block_too_many_params.dang
# Dot-block supplies exactly one value, so a block with 2+ params is rejected.
let r = 5.{ a, b => a + b }
